<resources>
    <string name="app_name">SLOT</string>
    <string name="enterMailAddress">הכנס כתובת אימייל</string>
    <string name="enterPassword">הכנס סיסמה</string>
    <string name="signIn">התחבר</string>
    <string name="back">חזור</string>
    <string name="set">קבע</string>
    <string name="setAppointment">קבע שעות קבלה</string>
    <string name="showAppointment">הצג שעות קבלה</string>
    <string name="student_my_appointment">שעות קבלה שקבעתי</string>
    <string name="goBack">חזור</string>
    <string name="welcome_professor">ברוך הבא מרצה</string>
    <string name="welcome_student">ברוך הבא סטודנט</string>
    <string name="signOut">התנתק</string>
    <string name="setDate">הגדר תאריך</string>
    <string name="setStartTime">הגדר שעת התחלה</string>
    <string name="setEndTime">הגדר שעת סיום</string>
    <string name="student_set_appointment">קבע שעת קבלה</string>
    <string name="chooseDate">בחר תאריך ושעה</string>
    <string name="chooseCourse">בחר קורס</string>
    <string name="login">התחברות</string>
    <string name="signin">הרשמה</string>
    <string name="backToMain">חזור למסך הראשי</string>
</resources>