<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_Activity"
    android:layout_gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterMailAddress"
        android:id="@+id/email_signIn"
        android:layout_marginTop="100dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterPassword"
        android:id="@+id/password_signIn"
        android:inputType="textPassword"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_signIn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="306dp"
        android:text="@string/signIn" />
    <Button
        android:id="@+id/returnfromsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="306dp"
        android:text="@string/back" />


</RelativeLayout>