<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".professor.setAppointmentProfessorActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="הכנס שם קורס"
        android:id="@+id/Coursename"
        android:layout_marginTop="100dp"/>



    <Button
        android:id="@+id/pickdate"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Coursename"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/setDate" />
    <Button
        android:id="@+id/pickstarttime"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickdate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/setStartTime" />
    <Button
        android:id="@+id/pickendtime"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickstarttime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/setEndTime" />

    <Button
        android:id="@+id/backfromsetproffesor"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickendtime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="9dp"
        android:text="@string/goBack" />

    <Button
        android:id="@+id/setmeetingProffesor"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickendtime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="245dp"
        android:text="@string/set" />

    <EditText
        android:id="@+id/interval"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setmeetingProffesor"
        android:layout_marginTop="-172dp"
        android:hint="הקצב זמן לכל פגישה בדקות" />

</RelativeLayout>