<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".professor.ProfessorMainActivity">

    <TextView
        android:id="@+id/hello_professor_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_professor"
        android:textColor="@color/purpBlue"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="31dp" />

    <Button
        android:id="@+id/set_appointment_professor"
        android:layout_width="192dp"
        android:layout_height="63dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:text="@string/setAppointment" />

    <Button
        android:id="@+id/show_appointment_professor"
        android:layout_width="192dp"
        android:layout_height="63dp"
        android:layout_below="@id/set_appointment_professor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/showAppointment" />

    <Button
        android:id="@+id/sign_out_professor_main"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_appointment_professor"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="213dp"
        android:text="@string/singOut" />

</RelativeLayout>